# loris

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  configure.ac  reconf
CVSROOT/: loginfo
Loris/: AUTHORS  COPYRIGHT  Makefile.am  NEWS  README  README-MAC  THANKS  config.h.bot  config.h.top  configure.ac  configure.in  reconf
Loris/csound/: Makefile.am  README  bweoscil.C  bweoscil.h  bweoscil.html  carhorn.sdif  clarinet.dilated.sdif  clarinet.sdif  flute.dilated.sdif  flute.sdif  lorisgens.C  lorisgens.h  lorisgens.html  lorisgens4.C  lorisgens4.h  lorisgens5.C  lorisgens5.h  lorismorph.html  lorisplay.html  meow.sdif  meow3.sdif  trombone.sdif  tryit.csd  tryit.orc  tryit.sco  trymorph.csd
Loris/demo/: Makefile  Makefile.am  README  cello.aiff  clarinet.4G#.Lemur.aiff  clarinet.4G#.lemr  clarinet.aiff  flute.4D.Lemur.aiff  flute.4D.lemr  flute.aiff  morphdemo.py  morphreference.tgz  morphsources.tgz  simplemorph.C  simplemorph.py  triplebull.aiff
Loris/demo/morphdemo.out/: README  cellOK.aiff  cellute.aiff  cellute2.aiff  clarOK.aiff  clariflute.aiff  fluteOK.aiff  flutello.aiff  flutello2.aiff  flutinet.aiff
Loris/doc/: Doxyfile  Doxyfile.in  LorisCDoc.html  LorisCppDoc.html  LorisPerlDoc.html  LorisPythonDoc.html  LorisTclDoc.html  Makefile.am  README  index.html  lorisgens.html
Loris/scripting/: Makefile  Makefile.am  README  dependfile  loris.i  loris.pm  loris.py  lorisAiffFile.i  lorisAnalyzer.i  lorisAnalyzer_pi.i  lorisBpEnvelope.i  lorisBpEnvelope_pi.i  lorisChannelizer.i  lorisEnvelope.i  lorisExportSpc.i  lorisFundamental.i  lorisPartialList.i  lorisPartialList_pi.i  lorisSampleVector.i  lorisSampleVector_pi.i  lorisSynthesizer.i  loris_perl_wrap.C  loris_python_wrap.C  loris_tcl_wrap.C  lorisdoc.py  perLoris.pm
Loris/src/: AiffData.C  AiffData.h  AiffFile.C  AiffFile.h  Analyzer.C  Analyzer.h  AssociateBandwidth.C  AssociateBandwidth.h  BigEndian.C  BigEndian.h  BinaryFile.C  BinaryFile.h  Breakpoint.C  Breakpoint.h  BreakpointEnvelope.C  BreakpointEnvelope.h  BreakpointUtils.C  BreakpointUtils.h  BufferIterator.h  COWPtr.h  Channelizer.C  Channelizer.h  Collator.C  Collator.h  Dilator.C  Dilator.h  Distiller.C  Distiller.h  DistributeEnergy.C  DistributeEnergy.h  Envelope.C  Envelope.h  Exception.C  Exception.h  ExportSdif.C  ExportSdif.h  ExportSpc.C  ExportSpc.h  F0Estimate.C  F0Estimate.h  (+154 more)
Loris/test/: Makefile.am  README  clarinet.aiff  flute.aiff  fromKyma.spc  morphtest.C  morphtest.py  morphtest.tcl  pitest.c  test_Aiff.C  test_Cropper.C  test_Distiller.C  test_Filter.C  test_Fundamental.C  test_Identity.C  test_Morpher.C  test_Partial.C  test_SdifFile.C  test_Synthesizer.C
Loris/utils/: Makefile.am  loris_analyze.C  loris_dilate.C  loris_mark.C  loris_spewmarkers.C  loris_synthesize.C  loris_unmark.C
Loris/win/: Loris_MorphTest.vcproj  Loris_PythonModule.vcproj  loris.h
csound/: Makefile.am  lorisgens4.C  lorisgens4.h  lorisgens5.C  lorisgens5.h
demo/: Makefile  morphdemo.py
doc/: Makefile.am
farm/: Makefile  clusterrun.py  runtrials.py  trials.py
farm/alienthreat/: alienthreat.py
farm/bass/: bass.D2.aiff  bass.Db2.arco.aiff  bass.G2.aiff  bass.py  bassD2.py
farm/bassoon/: bassoon.Db2.aiff  bassoonDb2.py
farm/bell/: nisobell.aiff  nisobell.py
farm/bongo/: bongo.py  bongoroll.aiff
farm/cats/: angrycat.aiff  angrycat.fund.sdif  angrycat.py  meow1.aiff  meow1.fund.sdif  meow3.aiff  meow3.fund.sdif  meows.py
farm/cellos/: cello.sulA.B3.aiff  cello.sulC.Ab2.aiff  cello.sulC.Db2.aiff  cello.sulD.Bb3.aiff  cello69.F.aiff  cello69.MF.aiff  cello69.MF.loud.aiff  cellos.py
farm/choir/: webernchoir.aiff  webernchoir.py
farm/density/: density.aiff  density.fund.qharm  density.py
farm/derbari/: derbari.aiff  derbari.py
farm/elephants/: elephant1.aiff  (+3 more)
fossa/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  reconf
fossa/src/: Makefile.am  Makefile.in  axis.c++  axis.h  channelizeDialog.c++  channelizeDialog.h  currentPartialsView.c++  currentPartialsView.h  currentSoundView.c++  currentSoundView.h  dilateArea.c++  dilateArea.h  dilateDialog.c++  dilateDialog.h  exportDialog.c++  exportDialog.h  fossa.c++  fossaFrame.c++  fossaFrame.h  fossaWindow.c++  fossaWindow.h  importDialog.c++  importDialog.h  lorisInterface.c++  lorisInterface.h  morphArea.c++  morphArea.h  morphDialog.c++  morphDialog.h  newNameDialog.c++  newNameDialog.h  partials.c++  partials.h  partialsList.c++  partialsList.h  partialsPixmap.c++  partialsPixmap.h  player.c++  player.h  pointWithText.c++  (+11 more)
include/: config.h  loris.h
jittery/: JitterySynthesizer.c++  JitterySynthesizer.h  Makefile  NoiseGenerator.h  ODonnellOscil.c++  ODonnellOscil.h  blandbell.sdif  blandcello.sdif  cjphase.m  ijphase.m  jitterMain.c++  jitterySynth.c++  m2pi.m  pphase.m  testphase.m
scripting/: Makefile.am  loris.i  lorisAnalyzer.i  lorisChannelizer.i  lorisEnvelope.i  lorisFileIO.i  lorisFundamental.i  lorisMorph.i  lorisPartialList.i  lorisPartialListOps.i  lorisSynthesizer.i  lorisdoc.py
src/: AiffData.C  AiffData.h  AiffFile.C  AiffFile.h  Analyzer.C  Analyzer.h  AssociateBandwidth.C  AssociateBandwidth.h  BigEndian.C  BigEndian.h  Breakpoint.C  Breakpoint.h  BreakpointEnvelope.h  BreakpointUtils.C  BreakpointUtils.h  Channelizer.C  Channelizer.h  Collator.C  Collator.h  Dilator.C  Dilator.h  Distiller.C  Distiller.h  Envelope.C  Envelope.h  Exception.h  F0Estimate.C  F0Estimate.h  Filter.C  Filter.h  FourierTransform.C  FourierTransform.h  FrequencyReference.C  FrequencyReference.h  Fundamental.C  Fundamental.h  Harmonifier.C  Harmonifier.h  ImportLemur.C  ImportLemur.h  (+55 more)
test/: Makefile.am  morphtest.C  morphtest.py  morphtest.tcl  pitest.c  test_Cropper.C  test_Distiller.C  test_Filter.C  test_Fundamental.C  test_Identity.C  test_Morpher.C  test_Partial.C  test_Resampler.C  test_SdifFile.C  test_Synthesizer.C
utils/: Makefile.am  loris_analyze.C  loris_dilate.C  loris_mark.C  loris_spewmarkers.C  loris_synthesize.C  loris_unmark.C
win/: loris.h
xcode/: loris_fastsynth_main.cpp
(+79 files in other folders)
